--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Calculadora-de-IMC-com-React/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://images.icon-icons.com/1066/PNG/512/Calculator_icon-icons.com_76881.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora de IMC</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
